--- a/Libropouch/Style/Controls.xaml
+++ b/Libropouch/Style/Controls.xaml
@@ -1,6 +1,73 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+    <Style TargetType="ComboBox">
+        
+        <Setter Property="Padding" Value="5"/>
+        <Setter Property="Width" Value="250"/>
+        <Setter Property="BorderThickness" Value="20"/>
+        <Setter Property="Foreground" Value="GhostWhite"/>
+        <Setter Property="BorderBrush" Value="#007acc"/>
+        <Setter Property="Background" Value="#49494e"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="0,0,0,5"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Height" Value="25"/>
+    </Style>
+
+    <Style TargetType="CheckBox">        
+        <Setter Property="BorderBrush" Value="#007acc"/>
+        <Setter Property="Background" Value="#49494e"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="0,0,0,5"/>
+    </Style>
+    
+    <Style TargetType="DatePicker">
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Foreground" Value="#d7d7d7"/>
+                <Setter Property="BorderBrush" Value="OrangeRed"/>
+            </Trigger>
+        </Style.Triggers>
+
+        <Setter Property="BorderBrush" Value="#007acc"/>
+        <Setter Property="Foreground" Value="GhostWhite"/>
+        <Setter Property="Background" Value="#49494e"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Width" Value="250"/>
+        <Setter Property="Height" Value="25"/>
+        <Setter Property="Margin" Value="0,0,0,5"/>
+    </Style>    
+    <Style TargetType="{x:Type DatePickerTextBox}">
+        <Setter Property="BorderBrush" Value="#007acc"/>
+        <Setter Property="Background" Value="#49494e" />        
+    </Style>
+
+    <Style TargetType="TextBox">
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Foreground" Value="#d7d7d7"/>
+                <Setter Property="BorderBrush" Value="OrangeRed"/>
+            </Trigger>            
+        </Style.Triggers>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Border Background="{TemplateBinding Background}"  BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="1">
+                        <ScrollViewer x:Name="PART_ContentHost" VerticalContentAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="BorderBrush" Value="#007acc"/>        
+        <Setter Property="Foreground" Value="GhostWhite"/>
+        <Setter Property="Background" Value="#49494e"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="Width" Value="250"/>
+        <Setter Property="Height" Value="25"/>
+        <Setter Property="Margin" Value="0,0,0,5"/>
+    </Style>
+
     <!--Style for all butons-->
     <Style TargetType="Button">
         <Setter Property="FontSize" Value="14" />
@@ -11,7 +78,7 @@
                 <ControlTemplate TargetType="Button">
                     <Border x:Name="RootElement" CornerRadius="4">
                         <Border.Background>
-                            <SolidColorBrush x:Name="BorderBrush" Color="#FF910202" />
+                            <SolidColorBrush x:Name="BorderBrush" Color="DarkRed" />
                         </Border.Background>
 
                         <Border.Effect>
