--- a/Libropouch/Style/Global.xaml
+++ b/Libropouch/Style/Global.xaml
@@ -1,4 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
+
+    <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="Controls.xaml" />
+        <ResourceDictionary Source="Info.xaml" />
+        <ResourceDictionary Source="ComboBox.xaml" />
+    </ResourceDictionary.MergedDictionaries>
+
 </ResourceDictionary>
