--- a/Libropouch/MainWindow.xaml
+++ b/Libropouch/MainWindow.xaml
@@ -156,7 +156,7 @@
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal">
                                     <Image Source="{Binding CountryFlagPath}" Height="18" Margin="0,0,5,0" />
-                                    <TextBlock Text="{Binding Publisher}" />
+                                    <TextBlock Text="{Binding Publisher}" Margin="0,0,5,0" />
                                     <TextBlock Text="{Binding Published}" Foreground="#FF292929" />
                                 </StackPanel>
                                 <TextBlock Text="{Binding Description}" />
