--- a/Libropouch/Style/ComboBox.xaml
+++ b/Libropouch/Style/ComboBox.xaml
@@ -196,7 +196,7 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ComboBox}">
-                    <Grid Width="250" Height="25" Margin="0,0,0,5" HorizontalAlignment="Left" VerticalAlignment="Center"  x:Name="ComboBoxGrid"> <!-- MAIN COMBOBOX GRID HERE-->
+                    <Grid Width="250" MinHeight="25" Margin="0,0,0,5" HorizontalAlignment="Left" VerticalAlignment="Center"  x:Name="ComboBoxGrid"> <!-- MAIN COMBOBOX GRID HERE-->
                         <VisualStateManager.VisualStateGroups>
                             <VisualStateGroup x:Name="CommonStates">
                                 <VisualState x:Name="Normal" />
