--- a/Libropouch/Style/Controls.xaml
+++ b/Libropouch/Style/Controls.xaml
@@ -262,6 +262,8 @@
     <Style TargetType="ListBoxItem">
         <Style.Resources>
             <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#007acc"/>
+            <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightBrushKey}" Color="#007acc"/>
+            <SolidColorBrush x:Key="{x:Static SystemColors.InactiveSelectionHighlightTextBrushKey}" Color="WhiteSmoke"/>
         </Style.Resources>
         <Setter Property="Padding" Value="5,2,5,2"/>
         <Setter Property="Margin" Value="0"/>
