--- a/Libropouch/EditBook.xaml
+++ b/Libropouch/EditBook.xaml
@@ -1,36 +1,24 @@
 ﻿<Window x:Class="Libropouch.EditBook"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="EditBook" Height="400" Width="800" Background="#2d2d30">
+        Title="EditBook" Height="400" Width="620" Background="#2d2d30">
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="Style/Global.xaml" />            
+                <ResourceDictionary Source="Style/Global.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <!--Style for the form-->
             <Style TargetType="RowDefinition">
                 <Setter Property="Height" Value="30"/>
             </Style>
-            <Style TargetType="TextBlock">
-                <Setter Property="VerticalAlignment" Value="Center"/>
-                <Setter Property="Foreground" Value="WhiteSmoke"/>
-                <Setter Property="Margin" Value="0,0,0,5"/>
-            </Style>
-            
-            <Style TargetType="Label">
-                <Setter Property="VerticalAlignment" Value="Center"/>
-                
-                <Setter Property="Foreground" Value="WhiteSmoke"/>
-                <Setter Property="Padding" Value="0,0,0,0"/>
-                <Setter Property="Margin" Value="0,0,0,5"/>
-            </Style>
-            
 
-           
+
+
+
             <!--End form style-->
         </ResourceDictionary>
     </Window.Resources>
-    <Grid Margin="5">
+    <Grid Margin="5" Name="MainGrid">
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
@@ -40,11 +28,14 @@
             <RowDefinition/>
             <RowDefinition/>
             <RowDefinition/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="90" />
             <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
+
+        <Image Grid.Column="1" Grid.Row="0"  Grid.RowSpan="9" MouseLeftButtonUp="CoverImage_OnMouseLeftButtonUp" Loaded="CoverImage_OnLoaded" HorizontalAlignment="Right" VerticalAlignment="Top" MaxWidth="240" MaxHeight="240"  />
 
         <Label Grid.Row="0" Grid.Column="0" Content="_Title:" Target="{Binding ElementName=Title}"/>
         <TextBox Grid.Row="0" Grid.Column="1" Name="Title" Loaded="TextBox_OnLoaded" LostFocus="TextBox_OnChanged"/>
@@ -71,14 +62,12 @@
         <DatePicker Grid.Row="4" Grid.Column="1" Name="Published" Loaded="DatePicker_OnLoaded" LostFocus="DatePicker_OnChanged" SelectedDateFormat="Short" Width="125"/>
 
         <Label Grid.Row="5" Grid.Column="0" Content="_Category:" Target="{Binding ElementName=Category}"/>
-        <ComboBox Grid.Row="5" Grid.Column="1" Name="Category">
-            <ComboBoxItem Content="df"/>
-        </ComboBox>
+        <TextBox Grid.Row="5" Grid.Column="1" Name="Category" Loaded="Category_OnLoaded"  LostFocus="TextBox_OnChanged"/>
 
         <Label Grid.Row="6" Grid.Column="0" Content="_Favorite:" Target="{Binding ElementName=Favorite}"/>
         <CheckBox Grid.Row="6" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="Favorite" ToolTip="Mark this book as one of your favorites"/>
-        
-        <Label Grid.Row="7" Grid.Column="0" Content="_Sync:" Target="{Binding ElementName=Sync}"/>        
+
+        <Label Grid.Row="7" Grid.Column="0" Content="_Sync:" Target="{Binding ElementName=Sync}"/>
         <CheckBox Grid.Row="7" Grid.Column="1" Checked="CheckBox_OnChecked" Unchecked="CheckBox_OnChecked" Loaded="CheckBox_OnLoaded" Name="Sync" ToolTip="This book will by copied into your reader during synchronization"/>
 
     </Grid>
