--- a/Libropouch/Style/Info.xaml
+++ b/Libropouch/Style/Info.xaml
@@ -1,5 +1,9 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+
+    <Style x:Key="InfoBox" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="Black"/>
+    </Style>
     
     <Storyboard x:Key="InfoDissolve">
         <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="(UIElement.Visibility)">
