--- a/Libropouch/Settings.xaml
+++ b/Libropouch/Settings.xaml
@@ -59,7 +59,7 @@
             </ComboBox.ItemTemplate>
         </ComboBox>
 
-        <Border Grid.Row="3" Grid.Column="1" Name="UnknownDeviceForm" Visibility="Collapsed" Background="#58585f" CornerRadius="6" Width="260" Padding="10" HorizontalAlignment="Left">
+        <Border Grid.Row="3" Grid.Column="1" Name="UnknownDeviceForm" Visibility="Visible" Background="#58585f" CornerRadius="6" Width="260" Padding="10" HorizontalAlignment="Left">
             <Border.Effect>
                 <DropShadowEffect Opacity="1" BlurRadius="10" Color="#383838"   ShadowDepth="0"/>
             </Border.Effect>
@@ -79,13 +79,13 @@
                 <Button Content="What is this?" Height="25" Click="UnknownDeviceHint_OnClick" Grid.Row="0" Grid.Column="1" />
 
                 <Label Grid.Row="1" Grid.Column="0" Content="_Model:" Target="{Binding ElementName=DeviceModel}"/>
-                <TextBox Grid.Row="1" Grid.Column="1" Name="DeviceModel" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="Model name of the reader device, usually identical to the marketing name of the reader. (For example: kindle's model name is kindle) "/>
+                <TextBox Grid.Row="1" Grid.Column="1" Width="150" Name="DeviceModel" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="Model name of the reader device, usually identical to the marketing name of the reader. (For example: kindle's model name is kindle) "/>
 
                 <Label Grid.Row="2" Grid.Column="0" Content="_PnP ID:" Target="{Binding ElementName=DevicePnpId}"/>
-                <TextBox Grid.Row="2" Grid.Column="1" Name="DevicePnpId" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="Device's Plug and play ID. Usually identical to the model name. But it can differ. "/>
+                <TextBox Grid.Row="2" Grid.Column="1" Width="150" Name="DevicePnpId" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="Device's Plug and play ID. Usually identical to the model name. But it can differ. "/>
 
                 <Label Grid.Row="3" Grid.Column="0" Content="_Book directory:" Target="{Binding ElementName=DeviceRootDir}" />
-                <TextBox Grid.Row="3" Grid.Column="1" Name="DeviceRootDir" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="Directory on the device, where all the books are stored. This is the directory which Libropouch will use, while working with the device."/>                
+                <TextBox Grid.Row="3" Grid.Column="1" Width="150" Name="DeviceRootDir" LostFocus="TextBox_OnLostFocus" Loaded="TextBox_OnLoaded" ToolTip="Directory on the device, where all the books are stored. This is the directory which Libropouch will use, while working with the device."/>                
             </Grid>
         </Border>
 
