--- a/Libropouch/MainWindow.xaml
+++ b/Libropouch/MainWindow.xaml
@@ -2,9 +2,9 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Libropouch" Height="700" Width="1000" MinWidth="500" MinHeight="350" x:Name="Window"
-        Background="#2d2d30">
-    <Window.Resources>                   
-        <ResourceDictionary Source="Style/Global.xaml" />                                   
+        Background="#2d2d30" KeyUp="MainWindow_OnKeyUp">
+    <Window.Resources>
+        <ResourceDictionary Source="Style/Global.xaml" />
     </Window.Resources>
 
     <Grid Margin="5">
@@ -46,11 +46,16 @@
         </Border>
 
         <DataGrid x:Name="BookGrid" Grid.Row="1" IsReadOnly="True" AutoGenerateColumns="False"
-                  Loaded="BookGrid_OnLoaded" VerticalAlignment="Top" CanUserResizeRows="False" RowHeaderWidth="1"
-                  HorizontalGridLinesBrush="#2b72ac" VerticalGridLinesBrush="#2b72ac" RowBackground="#5d5d5d" AlternatingRowBackground="#454545"  Background="#569cd6" >
-            
-                
-                <DataGrid.CellStyle>
+                  Loaded="BookGrid_OnLoaded" VerticalAlignment="Top" CanUserResizeRows="False" RowHeaderWidth="1" KeyUp="BookGrid_OnKeyUp"
+                  HorizontalGridLinesBrush="#2b72ac" VerticalGridLinesBrush="#2b72ac" RowBackground="#5d5d5d" AlternatingRowBackground="#454545"  Background="#569cd6" Style="{DynamicResource DataGridStyle1}" >
+            <DataGrid.Resources>
+                <Style x:Key="{ComponentResourceKey ResourceId=DataGridSelectAllButtonStyle, TypeInTargetAssembly={x:Type DataGrid}}" TargetType="{x:Type Button}">
+                    <Setter Property="Opacity" Value="0"/>  
+                </Style>                
+            </DataGrid.Resources>
+
+
+            <DataGrid.CellStyle>
                 <Style TargetType="DataGridCell">
                     <Style.Triggers>
                         <Trigger Property="IsSelected" Value="True">
@@ -60,7 +65,7 @@
                     </Style.Triggers>
                     <Setter Property="Foreground" Value="#F2F2F2" />
                     <Setter Property="FontWeight" Value="SemiBold" />
-                </Style>                
+                </Style>
             </DataGrid.CellStyle>
             <DataGrid.ColumnHeaderStyle>
                 <Style TargetType="{x:Type DataGridColumnHeader}">
