Added text field for filtering the book list via string contained in the title

--- a/Libropouch/MainWindow.xaml
+++ b/Libropouch/MainWindow.xaml
@@ -47,12 +47,10 @@
 
         <ComboBox HorizontalAlignment="Right" VerticalAlignment="Top" Name="FilterCategory" SelectionChanged="FilterCategory_OnSelectionChanged" Grid.Row="1" Visibility="Collapsed" Canvas.ZIndex="1">
             <ComboBoxItem>- - -</ComboBoxItem>
-            <ComboBoxItem>dfdffd</ComboBoxItem>
-            <ComboBoxItem>dfd44141ffd</ComboBoxItem>
-            <ComboBoxItem>ddssdfdffd</ComboBoxItem>
-            <ComboBoxItem>Sci-fi</ComboBoxItem>
         </ComboBox>
-        
+
+        <TextBox HorizontalAlignment="Left" VerticalAlignment="Top" Name="FilterName" KeyUp="FilterName_OnkeyUp" Grid.Row="1" Visibility="Collapsed" Canvas.ZIndex="1"/>                   
+
         <DataGrid x:Name="BookGrid" Grid.Row="1" IsReadOnly="True" AutoGenerateColumns="False"
                   Loaded="BookGrid_OnLoaded" VerticalAlignment="Top" CanUserResizeRows="False" RowHeaderWidth="1" KeyUp="BookGrid_OnKeyUp" PreviewMouseRightButtonUp="BookGrid_PreviewMouseRightButtonUp" PreviewMouseLeftButtonUp="BookGrid_PreviewMouseRightButtonUp"
                   HorizontalGridLinesBrush="#2b72ac" VerticalGridLinesBrush="#2b72ac" RowBackground="#5d5d5d" AlternatingRowBackground="#454545"  Background="#569cd6" Style="{DynamicResource DataGridStyle1}" >
